Add Ngrok configuration and service to support secure tunneling

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@
 N8N_ENCRYPTION_KEY=super-secret-key
 N8N_USER_MANAGEMENT_JWT_SECRET=even-more-secret
 
+############
+# [required] 
+# Ngrok configuration
+############
+
+NGROK_TOKEN=your-ngrok-auth-token
+NGROK_SUBDOMAIN=your-ngrok-subdomain.ngrok-free.app
 
 ############
 # [required] 
