--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ volumes:
   n8n_storage:
   qdrant_storage:
   flowise:
-  caddy-data:
-  caddy-config:
   valkey-data:
   postgres-data:
   portainer_data:
@@ -20,7 +18,7 @@ x-n8n: &service-n8n
     - N8N_PERSONALIZATION_ENABLED=false
     - N8N_ENCRYPTION_KEY
     - N8N_USER_MANAGEMENT_JWT_SECRET
-    - WEBHOOK_URL=http://oddly-capital-caribou.ngrok-free.app
+    - WEBHOOK_URL=https://oddly-capital-caribou.ngrok-free.app
 
 services:
   flowise:
@@ -56,30 +54,6 @@ services:
       - 6333:6333
     volumes:
       - qdrant_storage:/qdrant/storage
-
-  caddy:
-    container_name: caddy
-    image: docker.io/library/caddy:2-alpine
-    network_mode: host
-    restart: unless-stopped
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile:ro
-      - caddy-data:/data:rw
-      - caddy-config:/config:rw
-    environment:
-      - N8N_HOSTNAME=${N8N_HOSTNAME:-":8001"}
-      - FLOWISE_HOSTNAME=${FLOWISE_HOSTNAME:-":8003"}
-      - SUPABASE_HOSTNAME=${SUPABASE_HOSTNAME:-":8005"}
-      - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL:-internal}
-    cap_drop:
-      - ALL
-    cap_add:
-      - NET_BIND_SERVICE
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "1m"
-        max-file: "1"
 
   postgres:
     image: postgres:${POSTGRES_VERSION:-latest}
